--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,12 @@ input, select, textarea {
 	appearance: none;
 }
 
+
+.contact{
+	display:grid;
+	  grid-template-columns: 30px 100px 30px 100px;
+
+}
 /* Basic */
 
 	html {
@@ -119,6 +125,9 @@ input, select, textarea {
 			border-bottom-color: transparent;
 			color: #49bf9d !important;
 			text-decoration: none;
+		}
+		.gray{
+			color:gray;
 		}
 
 	strong, b {
