--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,7 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 
-/*
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -91,7 +87,7 @@ body
   font-family: "Avenir Next", "Avenir", sans-serif;
 }
 
-#menuToggle
+.menuToggle
 {
   display: block;
   position: absolute;
@@ -104,7 +100,7 @@ body
   user-select: none;
 }
 
-#menuToggle a
+.menuToggle a
 {
   text-decoration: none;
   color: black;
@@ -112,7 +108,8 @@ body
   transition: color 0.3s ease;
 }
 
-#menuToggle a:hover
+
+.menuToggle a:hover
 {
   color: tomato;
 }
@@ -136,7 +133,8 @@ body
 }
 
 
-#menuToggle span
+
+.menuToggle span
 {
   display: block;
   width: 33px;
@@ -156,18 +154,18 @@ body
               opacity 0.55s ease;
 }
 
-#menuToggle span:first-child
+.menuToggle span:first-child
 {
   transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2)
+.menuToggle span:nth-last-child(2)
 {
   transform-origin: 0% 100%;
 }
 
 
-#menuToggle input:checked ~ span
+.menuToggle input:checked ~ span
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
@@ -175,20 +173,20 @@ body
 }
 
 
-#menuToggle input:checked ~ span:nth-last-child(3)
+.menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 
-#menuToggle input:checked ~ span:nth-last-child(2)
+.menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
 
-#menu
+.menu
 {
   position: absolute;
   width: auto;
@@ -206,7 +204,7 @@ body
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
+.menu li
 {
   padding: 4px 0;
   font-size: 14px;
@@ -234,7 +232,7 @@ font-weight: bold;
 	font-weight: bold;
 	}
 
-#menuToggle input:checked ~ ul
+.menuToggle input:checked ~ ul
 {
   transform: none;
 }
@@ -2059,8 +2057,10 @@ font-weight: bold;
 		float: left;
 		margin-right: -2em;
 		opacity: 0;
-		width: 1em;
+	width:40px;
+	height: 30px;
 		z-index: -1;
+		
 	}
 
 		input[type="checkbox"] + label,
@@ -3045,7 +3045,7 @@ grid-template-columns: 1fr 1fr;
 				}
 
 		/* Poptrox */
-
+			}
 
 /* XSmall */
 
@@ -3068,7 +3068,4 @@ grid-template-columns: 1fr 1fr;
 				display: block;
 				line-height: 2.25em;
 				margin-left: 0;
-				padding-left: 0;
-			}
-
-	}
+				padding-left: 0;}}
