--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
- @import url("fontawesome-all.min.css");
+@import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 
 
@@ -413,7 +413,10 @@ font-weight: bold;
 	.align-right {
 		text-align: right;
 	}
-
+	.gray a{
+		color:gray;
+	}
+		
 /* Container */
 
 	.container {
@@ -3038,8 +3041,7 @@ text-align: left;
 			section.special, article.special {
 				text-align: center;
 			}
-
-		
+	
 
 		/* List */
 
