--- a/style.css
+++ b/style.css
@@ -237,6 +237,55 @@ html{
 {
     transform: none;
 }
+
+
+
+* {
+  touch-action: manipulation;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#c {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: -1;
+}
+
+
+
+.inner {
+    position: relative;
+}
+@keyframes flip {
+  0% {
+    transform: rotate(0);
+  }
+
+  50% {
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    transform: rotateY(180deg)  rotateX(180deg);
+  }
+}
+
+
+
+
+
 /* max width 1280px */
 @media screen and (max-width: 1280px) {
     .icon{    
